# AndroidNativeExecute

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/hanlon/androidnativeexecute/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
symballib/: CMakeLists.txt  build.gradle
symballib/src/main/: AndroidManifest.xml
symballib/src/main/cpp/: symbal.cpp
symballib/src/main/res/values/: strings.xml
